[project]
name = "lumen-bili-live"
version = "0.1.0"
description = "B站直播弹幕/礼物接收器"
requires-python = ">=3.10"
dependencies = [
    "blivedm",
    "browser-cookie3",
    "openai",
    "edge-tts",
]

[dependency-groups]
dev = ["mypy"]

[tool.uv]
# 这是一个可运行的服务脚本,不是要构建发布的包,关掉 package 模式
package = false

[tool.uv.sources]
# blivedm 未发布到 PyPI,从 GitHub 取(同时支持 web 与开放平台接口)
blivedm = { git = "https://github.com/xfgryujk/blivedm.git" }

[[tool.mypy.overrides]]
# blivedm 是第三方库且未提供类型信息(无 py.typed/stub),让 mypy 跳过对它的类型分析
module = ["blivedm", "blivedm.*", "browser_cookie3", "edge_tts"]
ignore_missing_imports = true
